Fix: Do not wrap name in timetable

--- a/_sass/base/typography/_copy.scss
+++ b/_sass/base/typography/_copy.scss
@@ -28,3 +28,7 @@ hr {
   border: none;
   opacity: .75
 }
+
+.no-wrap {
+  white-space: nowrap
+}
